# code20rust

GraphTheory/: .2025-04-21-Note-10-28.autosave.xopp  2025-04-21-Note-10-28.xopp  2025-05-21-Note-15-59.xopp
GraphTheory/test1/: Cargo.toml  perf.data  shell.nix
GraphTheory/test1/src/: bitset.rs  cellularautomation.rs  fa.rs  fmt_fa.rs  main.rs  minimization.rs  solver.rs  testing.rs  wlrendering.rs
GraphTheory/test1/tests/: canonical_label_test.rs  dfa_minimize_test.rs
GraphTheory/test2/: Cargo.toml
GraphTheory/test2/src/: bitset.rs  cellularautomation.rs  fa.rs  minimization.rs  solver.rs  testing.rs
GraphTheory/test2/tests/: to_dfa_test.rs
GraphTheory/test3/: Cargo.toml
GraphTheory/test3/renders/: generator.wls
GraphTheory/test3/src/: bitset.rs  cellularautomation.rs  fa.rs  minimization.rs  solver.rs  testing.rs
cell-by-cell/: Cargo.toml  README  (+2 more)
cell-by-cell-final/: Cargo.toml  README.md  output.txt  script.sh
cell-by-cell-final/renders/: solution_p10_s0_n148983902296836387615277056.txt  solution_p10_s0_n2304267552136750956544.txt  solution_p10_s0_n378283321288001847296.txt  solution_p1_s0_n756.txt  solution_p2_s0_n3728.txt  solution_p3_s0_n14251453430976.txt  solution_p4_s0_n171855104.txt  solution_p4_s0_n212072704.txt  solution_p5_s0_n23043730019328.txt  solution_p6_s0_n12555286547204781505564672.txt  solution_p6_s0_n51303213604573082603520.txt  solution_p8_s0_n748432005612240896.txt
cell-by-cell-final/src/: handle_solution.rs  int.rs  main.rs  solver.rs
code20search/: .gitignore  Cargo.toml  record-example.txt  results.txt  shell.nix  total-file-output-manual.txt  total-file-output.txt
code20search/outputs/: 2025-03-07-Note-16-33.xopp
code20search/outputs/o1/: output-server.txt  output-server2.txt  output-server3.txt  output-server4.txt  output.txt
code20search/outputs/o2/: output-server.txt  output-server2.txt  output-server3.txt  output-server4.txt
code20search/src/: main.rs  temp.txt
code20search/src/bruteforce/: bruteforce.rs  customuint.rs  mod.rs
code20search/src/satsolver/: filesatsolver.rs  mod.rs  satcreator.rs  splrsatsolver.rs  symmetricsatcreator.rs
code20search/symbolic/: code20cnf.txt  code20cnf2.txt  code20cnf3.txt  gameoflife2.nb  nope doesnt work.nb  output 1hr.txt  output.txt
(+43 files in other folders)
