[package]
name = "cell-by-cell-final"
version = "0.1.0"
edition = "2024"

[dependencies]
bnum = "0.13.0"
cgrustplot = "1.2.2"
rayon = "1.11.0"

[dev-dependencies]
rand = "0.9.2"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
debug = false
codegen-units = 1
panic = "abort"
overflow-checks = false
incremental = false

[profile.release.package."*"]
opt-level = 3
debug = false
codegen-units = 1
overflow-checks = false
incremental = false

[profile.release.package.cgrustplot]
opt-level = "z"
codegen-units = 16
incremental = true

[profile.dev.package.cgrustplot]
opt-level = "z"
codegen-units = 16
incremental = true
