[package]
name = "code20search"
version = "0.1.0"
edition = "2021"

[dependencies]
cgrustplot = "1.1.7"
nix = {version = "0.29.0", features = ["process"]}
rayon = "1.10.0"
splr = "0.17.2"
uint = "0.10.0"

[profile.release]
opt-level = 3
overflow-checks = false
lto = true
panic = "abort"
debug = false
incremental = true
codegen-units = 16
